# siyuan-crm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MP_verify_QqaW4cYDK8GxBbuG.txt  MP_verify_TksoQfSDwRIhbdcb.txt  Makefile  README.md  WW_verify_XDgKINYU8LF2JoSa.txt  app.py  design-qa.md  legacy_flask_app.py  local-environments-settings-page-W-Oe_iWM.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_wecom_sdk_decrypt.py  test_wecom_sdk_minimal.py  tsconfig.frontend.json  worktree-C0NyLtpP.js
.github/: CODEOWNERS  (+1 more)
docs/archive/experiments_ai_crm_next/workspace/: .gitignore  alembic.ini  pyproject.toml
docs/archive/experiments_ai_crm_next/workspace/migrations/: env.py
docs/archive/experiments_ai_crm_next/workspace/scripts/: run_postgres_integration_tests.sh
docs/archive/experiments_ai_crm_next/workspace/tests/: conftest.py  test_alembic_scaffold.py  test_architecture_boundaries.py  test_commerce_contract.py  test_commerce_media_parity.py  test_customer_read_model_contract.py  test_customer_read_model_parity.py  test_customer_read_model_sql_repo.py  test_fast_readonly_replacement_docs.py  test_frontend_legacy_routes.py  test_frontend_parity_plan.py  test_health.py  test_identity_resolution.py  test_mcp_contract.py  test_media_library_contract.py  test_postgres_test_guard.py  test_questionnaire_contract.py  test_questionnaire_parity.py  test_route_owner_headers.py  test_user_ops_contract.py  test_user_ops_parity.py  test_user_ops_sql_repo.py
docs/archive/experiments_ai_crm_next/workspace/tools/: doc_paths.py
(+3339 files in other folders)
