[project]
name = "ai-crm-next"
version = "0.1.0"
description = "Experimental modular-monolith rewrite of AI-CRM backend with legacy frontend compatibility."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.13,<2.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0"]
screenshot = ["playwright>=1.60,<2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["README.md", "alembic.ini", "docs", "migrations", "scripts", "tests", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../.."]
markers = [
  "postgres_integration: explicit PostgreSQL integration tests; skipped unless AICRM_NEXT_TEST_DATABASE_URL is set",
]
